# CDSCO

./: README.md  pyproject.toml  requirements.txt
app/: __init__.py  main.py
app/api/: routes.py
app/core/: config.py
app/models/: schemas.py
app/services/: anonymization.py  application_type_model.py  base.py  classification.py  comparison.py  completeness.py  deduplication.py  ocr.py  pdf_report.py  pipeline.py  portal_integration.py  report_generation.py  summarization.py
app/static/: app.js  index.html  style.css
app/static/components/: CommonStageOneForm.js  Dashboard.js  LoginPage.js  WorkflowWizard.js
app/static/components/stage2/: BabeClinicalStageTwo.js  CdtlStageTwo.js  CosmeticsStageTwo.js  DualUseNocStageTwo.js  FormulationStageTwo.js  TestLicenseStageTwo.js  helpers.js
app/static/config/: workflows.js
app/static/state/: store.js
app/utils/: text.py
data/: demo_use_cases.html  demo_use_cases.txt  mock_regulatory_cases.json
data/datasets/: BA_BE_clinical_trials_dataset.csv  cdtl_registration_dataset.csv  cosmetic_dataset.csv  dual_use_noc_dataset.csv  formulation_rd_dataset.csv  stage2_test_license.csv
data/models/: application_type_classifier.joblib  application_type_metrics.json
scripts/: train_application_type_model.py
tests/: test_services.py
