[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "regulatory-automation"
version = "1.0.0"
description = "Regulatory workflow automation and data anonymisation backend"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn>=0.30.0",
  "pydantic>=2.7.0",
  "scikit-learn>=1.5.0",
  "numpy>=1.26.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
